--- a/css/style.css
+++ b/css/style.css
@@ -507,10 +507,14 @@ Responsive Top Menu
         .menu li a {
           display: inline;
           height: auto;
-          font-weight: 600;
+          font-weight: 800;
           line-height: normal;
           background: transparent;
           border-top: none; }
+        .menu li a.current {
+          color: #B2D430;
+          padding-bottom: 10px;
+          border-bottom: 5px solid #B2D430; }
       .menu li:hover {
         background: none; }
         .menu li:hover a {
@@ -525,7 +529,7 @@ Responsive Top Menu
   color: #FFF5F5; }
   @media only screen and (min-width: 1170px) {
     .subMenu {
-      font-weight: 600; } }
+      font-weight: 800; } }
 
 @media only screen and (min-width: 1170px) {
   .subMenu:hover {
