--- a/scss/style.scss
+++ b/scss/style.scss
@@ -501,10 +501,16 @@ Responsive Top Menu
             a {
                 display: inline;
                 height: auto;
-                font-weight: 600;
+                font-weight: 800;
                 line-height: normal;
                 background: transparent;
                 border-top: none;
+            }
+            
+            a.current {
+                color: $color-green;
+                padding-bottom: 10px;
+                border-bottom: 5px solid $color-green;
             }
         }
         li:hover {
@@ -528,7 +534,7 @@ Responsive Top Menu
     color: $color-white;
     
     @include MQ(L) {
-        font-weight: 600;
+        font-weight: 800;
     }
 }
 
