--- a/css/style.css
+++ b/css/style.css
@@ -447,7 +447,7 @@ Responsive Top Menu
 -------------------------------- */
 .menu {
   z-index: 90;
-  position: fixed;
+  position: absolute;
   letter-spacing: .1em;
   font-family: "Maven Pro", sans-serif;
   width: 100%;
@@ -458,7 +458,7 @@ Responsive Top Menu
     display: block;
     text-align: center; }
   .menu > ul {
-    margin-top: 90px;
+    margin-top: 40px;
     text-shadow: 2px 2px 8px #2C343B; }
     @media only screen and (min-width: 1170px) {
       .menu > ul {
@@ -565,16 +565,16 @@ Responsive Top Menu
     .subMenu > ul li {
       display: block; } }
 
-.subMenu:hover > ul, .menu:focus > ul {
+.subMenu:hover > ul, .subMenu:focus > ul {
   height: 202px;
   background-color: #B2D430; }
   @media only screen and (min-width: 1170px) {
-    .subMenu:hover > ul, .menu:focus > ul {
+    .subMenu:hover > ul, .subMenu:focus > ul {
       background-color: rgba(178, 212, 48, 0.3);
       position: absolute;
       display: block;
       height: 205px; }
-      .subMenu:hover > ul a, .menu:focus > ul a {
+      .subMenu:hover > ul a, .subMenu:focus > ul a {
         color: #FFF5F5; } }
 
 .subMenu ul li:hover {
