--- a/scss/style.css
+++ b/scss/style.css
@@ -508,7 +508,7 @@ Responsive Top Menu
 /* line 422, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
 .menu {
   z-index: 90;
-  position: fixed;
+  position: absolute;
   letter-spacing: .1em;
   font-family: "Maven Pro", sans-serif;
   width: 100%;
@@ -521,7 +521,7 @@ Responsive Top Menu
     text-align: center; }
   /* line 437, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
   .menu > ul {
-    margin-top: 90px;
+    margin-top: 40px;
     text-shadow: 2px 2px 8px #2C343B; }
     @media only screen and (min-width: 1170px) {
       /* line 437, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
@@ -651,18 +651,18 @@ Responsive Top Menu
       display: block; } }
 
 /* line 585, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
-.subMenu:hover > ul, .menu:focus > ul {
+.subMenu:hover > ul, .subMenu:focus > ul {
   height: 202px;
   background-color: #B2D430; }
   @media only screen and (min-width: 1170px) {
     /* line 585, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
-    .subMenu:hover > ul, .menu:focus > ul {
+    .subMenu:hover > ul, .subMenu:focus > ul {
       background-color: rgba(178, 212, 48, 0.3);
       position: absolute;
       display: block;
       height: 205px; }
       /* line 595, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
-      .subMenu:hover > ul a, .menu:focus > ul a {
+      .subMenu:hover > ul a, .subMenu:focus > ul a {
         color: #FFF5F5; } }
 
 /* line 600, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
