--- a/css/style.css
+++ b/css/style.css
@@ -447,7 +447,7 @@ Responsive Top Menu
 -------------------------------- */
 .menu {
   z-index: 90;
-  position: absolute;
+  position: fixed;
   letter-spacing: .1em;
   font-family: "Maven Pro", sans-serif;
   width: 100%;
@@ -464,7 +464,7 @@ Responsive Top Menu
       .menu > ul {
         margin-top: 0; } }
   .menu li {
-    line-height: 3em;
+    line-height: 2.25em;
     font-size: 2em;
     width: 100%; }
     .menu li a {
@@ -566,7 +566,7 @@ Responsive Top Menu
       display: block; } }
 
 .subMenu:hover > ul, .subMenu:focus > ul {
-  height: 202px;
+  height: 150px;
   background-color: #B2D430; }
   @media only screen and (min-width: 1170px) {
     .subMenu:hover > ul, .subMenu:focus > ul {
