--- a/scss/style.scss
+++ b/scss/style.scss
@@ -421,7 +421,7 @@ Responsive Top Menu
 
 .menu {
     z-index: 90;
-    position: absolute;
+    position: fixed;
     letter-spacing: .1em;
     font-family: $font-2;
     width: 100%;
@@ -446,7 +446,7 @@ Responsive Top Menu
     }
     
     li {
-        line-height: 3em;
+        line-height: 2.25em;
         font-size: 2em;
         width: 100%;
         
@@ -583,7 +583,7 @@ Responsive Top Menu
 }
 
 .subMenu:hover > ul, .subMenu:focus > ul {
-    height: 202px;
+    height: 150px;
     background-color: $color-green;
     
     @include MQ(L) {
