--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ Header Components
   text-align: center;
   transform: translate(0%, -50%); }
   .headerSection .headerWrap {
-    background: linear-gradient(to right, #b2d430, transparent, transparent);
+    background: linear-gradient(to right, #b2d430, rgba(178, 212, 48, 0.75), transparent, transparent);
     position: absolute;
     height: 100px;
     width: 100%;
@@ -368,13 +368,13 @@ div.main-content.container-lg {
 h6 {
   position: relative;
   text-align: left;
-  font-weight: 800;
   z-index: 999;
   margin-left: 16px;
   display: block;
   font-size: 3rem;
   font-family: 'Oswald', sans-serif;
-  color: #FFF5F5; }
+  color: #FFF5F5;
+  text-shadow: 2px 2px 8px #000; }
   @media only screen and (min-width: 768px) {
     h6 {
       font-size: 4rem; } }
@@ -512,16 +512,24 @@ Responsive Top Menu
   width: 100%;
   height: 100%;
   font-weight: 800;
-  background-color: rgba(44, 52, 59, 0.9); }
+  background-color: rgba(44, 52, 59, 0.9);
+  display: table; }
+  @media only screen and (min-width: 1170px) {
+    .menu {
+      display: block; } }
   .menu > ul {
-    display: block;
-    text-align: center; }
-  .menu > ul {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
     margin-top: 40px;
     text-shadow: 2px 2px 8px #2C343B; }
+    @media only screen and (min-width: 768px) {
+      .menu > ul {
+        margin-top: 70px; } }
     @media only screen and (min-width: 1170px) {
       .menu > ul {
-        margin-top: 0; } }
+        margin-top: 0;
+        display: block; } }
   .menu li {
     line-height: 2.25em;
     font-size: 2em;
